Got rid of -DCGAL_DISABLE_ROUNDING_MATH_CHECK

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,6 +2,7 @@ cmake_minimum_required(VERSION 2.6)
 
 project(convexhull-checker)
 set(sources checker.cpp)
-add_definitions(-O2 -DCGAL_DISABLE_ROUNDING_MATH_CHECK)
+add_definitions(-O2 -frounding-math)
+message("flags=${CMAKE_CXX_FLAGS_RELEASE}")
 link_libraries(CGAL gmp)
 add_executable(convexhull-checker ${sources})
