--- a/cg2012.1/checkers/01-convex_hull/CMakeLists.txt
+++ b/cg2012.1/checkers/01-convex_hull/CMakeLists.txt
@@ -2,6 +2,9 @@ cmake_minimum_required(VERSION 2.6)
 
 project(convexhull-checker)
 
+set(CMAKE_BUILD_TYPE Release)
+set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -DDEBUG")
+
 set(sources checker.cpp)
 add_definitions(-O2 -frounding-math)
 link_libraries(CGAL gmp)
