--- a/cg2012.1/checkers/32-orientation/CMakeLists.txt
+++ b/cg2012.1/checkers/32-orientation/CMakeLists.txt
@@ -2,7 +2,9 @@ cmake_minimum_required(VERSION 2.6)
 
 project(orientation)
 
+
+set(CMAKE_BUILD_TYPE Release)
 set(sources checker.cpp)
-add_definitions(-O2 -frounding-math)
+add_definitions(-frounding-math)
 link_libraries(CGAL gmp)
 add_executable(orientation-checker ${sources})
