fixed compilation problems in #05 testgens

--- a/cg2012.1/05-point_in_convex_polygon/testgen/CMakeLists.txt
+++ b/cg2012.1/05-point_in_convex_polygon/testgen/CMakeLists.txt
@@ -4,4 +4,5 @@ project(pointinconvexpolygon-generator)
 set(sources correctness_generator.cpp perfomance_generator.cpp)
 add_definitions(-O2 -frounding-math)
 link_libraries(CGAL gmp)
-add_executable(pointinconvexpolygon-generator ${sources})
+add_executable(correctness_testgen correctness_generator.cpp)
+add_executable(performance_testgen perfomance_generator.cpp)
